Temporary fix for Chrome mobile layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,8 @@ body {
   height: 100%;
   overflow: hidden;
   background: rgb(17, 17, 17);
+
+  
 }
 
 .content-feed {
@@ -30,6 +32,7 @@ body {
   right: 0;
   position: absolute;
   overflow: auto;
+  text-align: center;
 }
 
 .download-modal {
